--- a/css/aesthetics.css
+++ b/css/aesthetics.css
@@ -114,53 +114,98 @@ header h2{
 
 #form2{
     background-color: #1a2149;
+    border: 50px solid #728189;
     height: 800px;
     width: 800px;
     margin: auto;
-    border: 50px solid #728189;
-}
-#second{
-    background-color: #0f4661;
-    border-radius: 5px;
-    height: 400px;
-    width: 730px;
-    height: 500px;
-    margin: auto;
-    padding: 20px;
 }
 #form2 h1{
+    text-align: center;
     color: #e0ce00;
     font-family: 'IBM Plex Mono', monospace;
-    text-align: center;
-    margin: 100px;
+    font-size: 2em;
+    margin-top: 250px;
+    margin-bottom: 50px;
+}
+#second{
+    border-radius: 10px;
+    width: 750px;
+    height: 300px;
+    padding: 15px;
+    margin: auto;
+    background-color: #0f4661;
 }
 #inputs2, #message2{
+    border: 0;
+    outline 0;
+    border-radius: 8px;
     display: block;
     background-color: #e0ce00;
-    border: 1px solid #e0ce00;
-    border-radius: 5px; 
-    margin: 10px;
+    width: 100%;
+    margin-top: 1em;
+    padding: 1em;
+    font-family: 'IBM Plex Sans', sans-serif;
+    color: #1a2149;
+    resize: none;
 }
 #inputs2{
-    float: left;
-    height: 50px;
-    width: 350px;
+    margin-bottom: 50px;
 }
 #message2{
-    background-color: #e0ce00;
-    border-radius: 5px;
-    width: 300px;
-    height: 220px;
+    height: 200px;
 }
-#formSubmitBtn2{
+#inputs2::placeholder {
+    font-family: 'IBM Plex Sans', sans-serif;
+    color: #1a2149;
+    opacity: 1;
+}
+#inputs2:-ms-input-placeholder {
+    font-family: 'IBM Plex Sans', sans-serif;
+    color: #1a2149;
+}
+#inputs2::-ms-input-placeholder { 
+    font-family: 'IBM Plex Sans', sans-serif;
+    color: #1a2149;
+}
+#message2::placeholder {
+    font-family: 'IBM Plex Sans', sans-serif;
+    color: #1a2149;
+    opacity: 1;
+}
+#message2:-ms-input-placeholder {
+    font-family: 'IBM Plex Sans', sans-serif;
+    color: #1a2149;
+}
+#message2::-ms-input-placeholder { 
+    font-family: 'IBM Plex Sans', sans-serif;
+    color: #1a2149;
+}
+.half{
+    float: left;
+    width: 48%;
+    margin-bottom: 1em;
+}
+.right {
+    width: 40%;
+}
+.left {
+    margin-right: 8%; 
+}
+#btn2{
+    display: flex;
+    padding: 15px;
+}
+#submitBtn2{
+    margin: auto;
+    border: 0;
+    border-radius: 10px;
     background-color: #0f4661;
+    width: 100%;
+    height: 50px;
     color: #e0ce00;
-    border: 1px solid #e0ce00;
-    border-radius: 5px; 
-    height: 40px;
-    width: 250px;
+    font-family: 'IBM Plex Mono', monospace;
+    font-size: 1.5em;
 }
-
 #form3{
     background-color: #e0ce00;
     height: 800px;
